--- a/visualizer/src/public/index.html
+++ b/visualizer/src/public/index.html
@@ -25,6 +25,6 @@
         <script src="./js/piece.js"></script>
 
         <!-- Sketch -->
-        <script src="./sketch.js"></script>
+        <script src="./js/sketch.js"></script>
   </body>
 </html>
