--- a/visualizer/src/public/index.html
+++ b/visualizer/src/public/index.html
@@ -12,11 +12,11 @@
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script>
 
         <!-- EasyCam -->
-        <script src="https://cdn.jsdelivr.net/gh/freshfork/p5.EasyCam/p5.easycam.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/freshfork/p5.EasyCam@1.2.3/p5.easycam.min.js"></script>
 
         <!-- Socket.IO -->
         <script type="module">
-            import { io } from "https://cdn.socket.io/4.7.5/socket.io.esm.min.js";
+            import { io } from "https://cdn.socket.io/4.8.1/socket.io.esm.min.js";
             window.socket = io(window.location.origin);
         </script>
 
