[FEATURE] Create a Cube class with constructor and show method

--- a/visualizer/src/public/index.html
+++ b/visualizer/src/public/index.html
@@ -29,7 +29,9 @@
 
         <!-- Other Scripts -->
         <script src="./js/canvas.js"></script>
+        <script src="./js/cube.js"></script>
         <script src="./js/piece.js"></script>
+        <script src="./js/turn.js"></script>
 
         <!-- Sketch -->
         <script src="./js/sketch.js"></script>
