[FEATURE] Implement turning with transformation matrices

--- a/visualizer/src/public/index.html
+++ b/visualizer/src/public/index.html
@@ -16,8 +16,8 @@
 
         <!-- Matrices -->
         <script type="module">
-            import { mat3, mat4 } from "https://cdn.jsdelivr.net/npm/gl-matrix@3.4.4/esm/index.js";
-            window.mat3 = mat3;
+            import { mat2d, mat4 } from "https://cdn.jsdelivr.net/npm/gl-matrix@3.4.4/esm/index.js";
+            window.mat2d = mat2d;
             window.mat4 = mat4;
         </script>
 
@@ -29,6 +29,7 @@
 
         <!-- Other Scripts -->
         <script src="./js/canvas.js"></script>
+        <script src="./js/controls.js"></script>
         <script src="./js/cube.js"></script>
         <script src="./js/piece.js"></script>
         <script src="./js/turn.js"></script>
