--- a/visualizer/src/public/index.html
+++ b/visualizer/src/public/index.html
@@ -33,6 +33,9 @@
         <script src="./js/cube.js"></script>
         <script src="./js/piece.js"></script>
         <script src="./js/turn.js"></script>
+        <script src="./js/move.js"></script>
+        <script src="./js/enums/direction.js"></script>
+        <script src="./js/enums/layer.js"></script>
 
         <!-- Sketch -->
         <script src="./js/sketch.js"></script>
